Security and Controller begin

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>nvs-project</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
