--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>nvs-project</name>
 	<description>NVS Project</description>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>11</java.version>
